# transformer_from_scratch

./: .gitignore  README.md  pyproject.toml
transformer/: config.py  dataset.py  model.py  train.py
