[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "Implementing the transformer from scratch using PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "ipykernel>=6.30.1",
    "ruff>=0.13.0",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
]
